fixed bugs on todoroute
